k8s/graph-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graph-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: graph
  template:
    metadata:
      labels:
        component: graph
    spec:
      containers:
      - name: graph
        image: ccheatham/complex-graph
        ports:
        - containerPort: 4000
