k8s/mf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mf-rpc-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mf-rpc
  template:
    metadata:
      labels:
        component: mf-rpc
    spec:
      containers:
      - name: mf-rpc
        image: ccheatham/complex-mf-rpc-api:v1
        ports:
        - containerPort: 8080
