k8s/graph-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graph-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: graph
  ports:
  - port: 4000
    targetPort: 4000
