k8s/mf-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mf-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: mf-rpc
  ports:
  - port: 6379
    targetPort: 6379
